--- a/package.json
+++ b/package.json
@@ -7,6 +7,22 @@
     "build": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {
+      "no-console":"off"
+    },
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
