--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {
-      "no-console":"off"
-    },
     "parserOptions": {
-      "parser": "babel-eslint"
-    }
+      "parser": "@babel/eslint-parser"
+    },
+    "rules": {}
   },
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.12",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "vue": "^2.6.14",
     "vue-router": "^3.1.3"
   },
@@ -38,20 +39,6 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-template-compiler": "^2.6.14"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
   },
   "browserslist": [
     "> 1%",
